// Generated by sylk.build
syntax = "proto3";

package ppm.registry.v1;



message S3 {

	string bucket_name = 1;
}

message Local {

	string registry_path = 1;
}

message Storage {

	oneof storage_backend {
		ppm.registry.v1.Local local = 1;
		ppm.registry.v1.S3 s3 = 2;
	};
}